--- a/config.yaml
+++ b/config.yaml
@@ -1,25 +1,23 @@
 units:
   # Size of each key. cx and cy for choc, u and U for MX.
-  kx: cx
-  ky: cy
+  kx: 16 
+  ky: 16
   # key spread and padding
-  px: 1.04kx
-  py: 1.04ky
+  px: 17
+  py: 17
   # From that, get the spacing between keys
   ksx: px-kx
   ksy: py-ky
   lpx: px + 1
   
   # Stagger for all of the different columns
-  stagger1: py # ring column one key above the pinky column
-  stagger2: 0.3py # middle column .3 key above the ring column
-  stagger3: -0.6py # index
+  stagger1: 0.8py # ring column one key above the pinky column
+  stagger2: 0.4py # middle column .3 key above the ring column
+  stagger3: -0.5py # index
   stagger4: -0.2py # inner
 
   xiao_length: 21
   xiao_width: 17.78
-
-  trrs_width: 6.1
 
 points:
   key:
@@ -100,29 +98,6 @@ outlines:
           shift: [0.5lpx, -0.5py]
         - ref: thumbfan_inner_thumb # Bottom left
           shift: [-0.5lpx, -0.5py]
-    logo:
-      what: polygon
-      points:
-        - ref: matrix_pinky_bottom # Top left (in board)
-          shift: [0, py]
-        - ref: matrix_pinky_bottom # Top right (in board)
-          shift: [2px, py]
-        - ref: matrix_pinky_bottom # Bottom right (in board)
-          shift: [2px, -0.5py]
-        - ref: matrix_pinky_bottom # Bottom left (in board)
-          shift: [0, -0.5py]
-    trrs:
-      what: polygon
-      points:
-        - ref: matrix_inner_top # Top left
-          shift: [-2px, 0.5py+trrs_width+ksy]
-        - ref: matrix_inner_top # Top right
-          shift: [0.5lpx, 0.5py+trrs_width+ksy]
-        - ref: matrix_inner_top # Bottom right (in board)
-          shift: [0.5lpx, -1py]
-        - ref: matrix_inner_top # Bottom left
-          shift: [-2px, -1py]
-
   board:
     - what: outline
       name: board_noround
@@ -187,13 +162,10 @@ pcbs:
       main:
         outline: board
     footprints:
-      choc_hotswap:
-        what: choc
+      pg1316s_switch:
+        what: pg1316s
         where: true
         params:
-          keycaps: true
-          reverse: true
-          hotswap: true
           from: "{{colrow}}"
           to: "{{column_net}}"
       diode:
@@ -274,28 +246,6 @@ pcbs:
           from: BAT+
           to: RAW
           side: B
-      trrs:
-        what: trrs
-        where:
-          ref: matrix_inner_top
-          shift: [7.86, 0.5ky+0.70+ksy]
-          rotate: -90
-        params:
-          reverse: true
-          symmetric: true
-          A: VCC5
-          B: VCC5 # overlaps with A
-          C: GND
-          D: P7
-      logo:
-        what: logo
-        where:
-          ref: matrix_ring_bottom
-          shift: [0, -1py]
-        params:
-          # Remove F.Paste if you want to use a stencil when soldering!
-          # This just allows us to see the correct color in KiCad's 3d viewer.
-          layers: [F.Cu, F.Paste, F.Mask]
       monkey:
         what: monkey
         where:
